# AdventOfCode2024

./: .gitignore  CMakeLists.txt  boilerplate.cpp  main.cpp
Day1/: main.cpp
Day10/: main.cpp
Day11/: main.cpp
Day12/: main.cpp
Day13/: main.cpp
Day14/: main.cpp  test_input.txt
Day15/: main.cpp
Day16/: main.cpp
Day17/: main.cpp
Day18/: main.cpp
Day19/: main.cpp
Day2/: main.cpp  test_input.txt
Day20/: main.cpp
Day21/: main.cpp
Day22/: main.cpp
Day23/: main.cpp
Day24/: main.cpp  swaps.txt
Day25/: main.cpp
Day3/: main.cpp  test_input.txt
Day4/: main.cpp
Day5/: main.cpp  test_input.txt
Day6/: main.cpp  test_input.txt
Day7/: main.cpp
Day8/: main.cpp
Day9/: main.cpp
