cmake_minimum_required(VERSION 3.30)
project(AdventOfCode2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(AdventOfCode2024
        Day1/main.cpp
        Day2/main.cpp
        Day3/main.cpp
        Day4/main.cpp
        Day5/main.cpp
        boilerplate.cpp
        Day6/main.cpp
        Day7/main.cpp
        Day8/main.cpp
        Day9/main.cpp
        Day10/main.cpp
        Day11/main.cpp
        Day12/main.cpp
        Day13/main.cpp
        Day14/main.cpp
        Day15/main.cpp
        Day16/main.cpp
)
